tests/good/typing/024-eq-string-int.clap
val x = ("42" = 42)
