tests/bad/interpret/006-app-str.clap
val f = "foo"
val x = f 42

